Test: 대여 검색 페이징 테스트